# python-template-repo

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: pr-checks.yml
src/: logging_config.py  settings.py
tests/: conftest.py  test_logging_config.py  test_settings.py
