[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # For easier usage, validation, and parsing of settings and environment variables.
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    # Linting and formatting.
    "ruff>=0.9.0",
    # Unit testing framework.
    "pytest>=9.1.1",
    "pytest-cov>=5.0.0",
]


[tool.uv]
# Set the cache dir in the root of the project to avoid issues with hardlinks in the devcontainer.
# This is needed because the devcontainer mounts the project directory as a volume in the container.
cache-dir = ".uv/cache"

[tool.ruff]
line-length = 100

# More strict linting rules for better code quality and consistency.
[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP035", "SIM", "S"]

[tool.ruff.lint.extend-per-file-ignores]
# Ignore missing docstrings, missing type annotations and security warnings in test files.
# Include **/ to cover tests in any subdirectory (helpful for multi-package repos).
"**/tests/**" = ["ANN", "D", "S"]
